# BoilerPlateTestFlight

./: .gitignore  README.md  jest.config.js  nx.json  package-lock.json  package.json  workspace.json
apps/admin/: .eslintrc.json
apps/admin-e2e/: .eslintrc.json
apps/admin-e2e/src/integration/: app.spec.ts
apps/admin/pages/: _app.tsx
apps/backend/: .coverage  .env  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
apps/backend/app/: models.py  schema.py
apps/backend/app/utils/: __init__.py  check_and_set.py  helper_relay.py  image.py  resize_images.py
apps/backend/boilerplate/: schema.py  settings.py  urls.py
apps/backend/djangodemo/djangoApp/: .coverage  admin.py  cron.py  documents.py  models.py  views.py
apps/backend/djangodemo/djangoApp/migrations/: 0001_initial.py  0002_auto_20210404_0918.py  0003_auto_20210409_1557.py  0004_myuser.py  0005_delete_myuser.py
apps/backend/djangodemo/djangoApp/templates/: search.html
apps/backend/djangodemo/djangoApp/tests/: test_mymodel.py
apps/backend/djangodemo/users/: admin.py  forms.py  models.py
apps/backend/djangodemo/users/migrations/: 0001_initial.py
apps/backend/images/: apps.py  models.py
apps/backend/images/schema/: __init__.py  filters.py  loaders.py  mutations.py  queries.py  types.py
apps/frontend/: app.json  jest.config.js
apps/static/: .eslintrc.json
apps/static-e2e/: .eslintrc.json
apps/static/pages/: _app.tsx
tools/executors/python/: .eslintrc.json  builder.json  tsconfig.json
tools/executors/python/src/poetry/: builder.d.ts  builder.js  schema.json
