[tool.poetry]
name = "boilerplate-be"
version = "0.1.0"
description = "Boilerplate"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
pdbpp = "^0.10.2"
flake8 = "^3.9.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
